--- a/styles.css
+++ b/styles.css
@@ -110,36 +110,44 @@ img{
 }
 
 
-.botones{
+.botones {
     display: flex;
-    justify-content: center;
-}	
-.botonSig {
-    background-color: rgb(151, 151, 151);
-    color: #fff;
-    display: block;
-    margin: 20px auto;
-    padding: 10px 20px;
-    font-size: 1rem;
-    cursor: pointer;
-    border-radius: 16px;
+    justify-content: space-around;
+    margin-top: 20px; /
 }
 
-.botonAtr {
+.botonAtr, .botonSig {
     background-color: rgb(161, 161, 161);
     color: #fff;
-    display: block;
-    margin: 20px auto;
     padding: 10px 20px;
     font-size: 1rem;
     cursor: pointer;
+    border: none;
     border-radius: 16px;
+    transition: background-color 0.3s;
+}
+
+.botonAtr:hover, .botonSig:hover {
+    background-color: rgb(151, 151, 151);
 }
 
 
 
 
 @media screen and (max-width: 768px){
+    
+
+    header{
+        background-image: url(./mew.png);
+        background-size: contain;
+        width: 100%;
+        height: 60vh;
+    }
+
+    .contenedor{
+        margin-top: 0;
+    }
+
     .menuNav{
         display: flex;
         flex-direction: column;
